python-shelter (1.1.3~dev) unstable; urgency=medium

  * Add initialize_child() method into shelter.core.context.Context

 -- Jan Seifert <jan.seifert@firma.seznam.cz>  Tue, 31 Jan 2017 09:38:43 +0100

python-shelter (1.1.2) unstable; urgency=medium

  * devserver and shell management commands now start service processes
    in threads
  * Add initialize() method into shelter.core.processes.BaseProcess class
  * Some minor improvements

 -- Jan Seifert <jan.seifert@firma.seznam.cz>  Tue, 31 Jan 2017 09:38:43 +0100

python-shelter (1.1.1) unstable; urgency=medium

  * Fixed shelter.contrib.config.iniconfig.IniConfig class
  * Fixed documentation

 -- Jan Seifert <jan.seifert@firma.seznam.cz>  Mon, 01 Aug 2016 16:27:00 +0200

python-shelter (1.1.0) unstable; urgency=medium

  * shelter.core.config refactoring
  * Added initialize() into Config and Context classes

 -- Jan Seifert <jan.seifert@firma.seznam.cz>  Fri, 29 Jul 2016 13:24:05 +0200

python-shelter (1.0.0+2) unstable; urgency=medium

  * Update Debian dependency

 -- Jan Seifert <jan.seifert@firma.seznam.cz>  Wed, 06 Jul 2016 20:50:45 +0200

python-shelter (1.0.0+1) unstable; urgency=medium

  * Fixed Debian dependency

 -- Jan Seifert <jan.seifert@firma.seznam.cz>  Tue, 21 Jun 2016 13:47:38 +0200

python-shelter (1.0.0) unstable; urgency=medium

  * First release 1.0.0

 -- Jan Seifert <jan.seifert@firma.seznam.cz>  Fri, 01 Apr 2016 16:16:18 +0200